hphp/hack/test/typecheck/encapsed4.php.exp
File "encapsed4.php", line 7, characters 10-17:
Variable variables are not legal; all variable identifiers must be static strings. (Naming[2081])
