hphp/hack/test/typecheck/encapsed4.php
<?hh // partial

class C {}

function f(): void {
  $c = new C();
  $s = "${c->x()}";
}
